--- a/connection-manager/client/src/App.css
+++ b/connection-manager/client/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: left;
-  padding: 10px;
+  padding: 0px 20px 0px 20px;
 }
 
 .App-header {
@@ -11,9 +11,14 @@
   padding: 10px;
   border-style: solid;
   display: inline-block;
+  width: 400px;
 }
 
 .account {
   text-align:right;
   float: right;
+}
+
+.header, .account {
+  display: inline-block;
 }
